making Sing up ...

--- a/src/assets/styles/base/_settings.scss
+++ b/src/assets/styles/base/_settings.scss
@@ -1,12 +1,14 @@
 // configuraciones globales
 $primary: #18D399;
 $red: #FF2A3B;
-$dark-grey : rgb(128, 128, 128);
+$lred: #FFEEEE;
+$dark-gray : rgb(128, 128, 128);
 $gray : rgb(230, 230, 230);
 $lgray : #f3f3f3;
-$font-grey: #5F6368;
+$font-gray: #bcbfc4;
 $white: #fff;
 $google-blue: #5969F9;
 $button-active-blue: #1669f2;
-$green: #8FC97B;
+$green: #89F4AB;
 $blue: #6EF0FA;
+$yellow: rgb(251,245,208);
