--- a/src/assets/styles/base/_base.scss
+++ b/src/assets/styles/base/_base.scss
@@ -2,8 +2,10 @@
     font-family: Roboto, Arial, sans-serif;
     margin: 0;
 }
-
-input.form-control{
+a{
+    text-decoration: none;
+}
+.form-control{
     border: none;
     background: $lgray;
     outline: none;
