--- a/src/assets/styles/components/auth/_login.scss
+++ b/src/assets/styles/components/auth/_login.scss
@@ -3,7 +3,8 @@
 
     // justify-content: center;
     &__info {
-        display: none;
+        background: $yellow;
+        color: darken($yellow, 50);
     }
 
 }
@@ -12,12 +13,13 @@
     padding: rem(15);
     flex: 1 auto;
     display: flex;
-    
+
     .login__container {
         flex-basis: 400px;
         margin: auto;
     }
-    .login__header{
+
+    .login__header {
         margin-top: rem(30);
     }
 }
@@ -30,16 +32,20 @@
         margin-bottom: rem(5);
     }
 
-    .password-title {   
+    .password-title {
         display: flex;
         justify-content: space-between;
 
         a span {
             display: inline-block;
-            margin-top: rem(15)
+            margin-top: rem(15);
+            color: $google-blue;
+            font-size: 14px;
+
         }
     }
-    .btn-register{
+
+    .btn-register {
         margin-top: rem(10);
         background: $primary;
         color: #fff;
@@ -48,7 +54,44 @@
     }
 }
 
-.login__footer{
+.login__footer {
     text-align: center;
     margin-top: rem(20);
+
+    a {
+        color: $google-blue;
+        font-size: 14px;
+    }
+}
+
+.form-control {
+    transition: all .2s;
+    box-shadow: $primary 0px 0px 0px 0px;
+
+    &:hover {
+        background: #fff;
+        box-shadow: lighten($primary, 5) 0px 0px 8px 1px;
+    }
+}
+
+
+
+/* ------------------------------ general class ----------------------------- */
+.auth-info {
+    display: none;
+    box-sizing: border-box;
+    height: 100vh;
+    max-width: 400px;
+    padding: rem(40);
+}
+
+/* ------------------------------ MEDIA QUERIES ----------------------------- */
+
+@media (min-width: 962px) {
+    .login {
+        &__info {
+            display: block;
+        }
+    }
+
 }
