--- a/src/assets/styles/base/_settings.scss
+++ b/src/assets/styles/base/_settings.scss
@@ -2,7 +2,7 @@
 $primary: #18D399;
 $red: #FF2A3B;
 $lred: #FFEEEE;
-$dark-gray : rgb(128, 128, 128);
+$dgray : rgb(128, 128, 128);
 $gray : rgb(230, 230, 230);
 $lgray : #f3f3f3;
 $font-gray: #bcbfc4;
@@ -12,3 +12,5 @@ $button-active-blue: #1669f2;
 $green: #89F4AB;
 $blue: #6EF0FA;
 $yellow: rgb(251,245,208);
+$dyellow: rgb(251, 235, 131);
+$black:#0D0C22;
